Issue #7: Fixing navigation spacing

--- a/src/css/general.less
+++ b/src/css/general.less
@@ -4,6 +4,7 @@
 
 .category {
   background-color: @content-bg-color;
+  margin-top: 3em; /* Needed for navigation */
   ul {
     list-style-type: none;
     padding-left: 2em;
