--- a/src/css/portfolio.less
+++ b/src/css/portfolio.less
@@ -1,6 +1,7 @@
 .portfolio-area {
   .portfolio-list {
     padding: 0;
+    margin-top: 1em;
   }
 
   .portfolio-item {
